--- a/style.css
+++ b/style.css
@@ -6,13 +6,12 @@
     box-sizing: border-box;
 }
 
-h1.titulo-com-faixa{
+
+h1.titulo-bingo{
     color: rgb(255, 255, 255);
     padding: 0 40px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 150px;
-    background-image: linear-gradient(to right, rgb(121, 13, 215), rgb(16, 210, 217), rgb(98, 12, 227)); /* Exemplo de degradê horizontal */
-    color: rgb(254, 254, 254);
     font-size: 72px;
     display: flex;
     align-items: center;
@@ -23,6 +22,32 @@ h1.titulo-com-faixa{
 
 }
 
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  background: linear-gradient(-45deg, #ff00cc, #3333ff, #00ffcc, #ff9900);
+  background-size: 400% 400%; /* deixa a área maior para a animação se mover */
+  animation: gradientMove 15s ease infinite; /* chama a animação */
+}
+
+/* Animação do gradiente */
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+
 .container-tabela{
     align-items: center;
     display: flex;
@@ -31,7 +56,7 @@ h1.titulo-com-faixa{
 }
 .tabela-bingo {
     border: 3px solid rgb(70, 7, 101);
-    font-size: 2.2em;
+    font-size: 2rem;
     display: flex;
     
 }
@@ -40,6 +65,6 @@ h1.titulo-com-faixa{
 
 .tabela-bingo td {
     border: 1px solid rgb(89, 4, 110);
-    padding: 20px 70px;
+    padding: 10px 40px;
 }
 
