--- a/style.css
+++ b/style.css
@@ -7,18 +7,31 @@
 }
 
 
-h1.titulo-bingo{
-    color: rgb(255, 255, 255);
-    padding: 0 40px;
+h1.bem-vindo{
+    color: rgb(0, 0, 0);
+    padding: 0 50px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 150px;
-    font-size: 72px;
+    font-size: 70px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     width: 100%;
-    top: 0;
-    left: 0;
+    position: relative;
+    top: 50px; 
+}
+
+h2.titulo-bingo{
+    color: rgb(0, 0, 0);
+    padding: 0 50px;
+    font-family: "Playwrite CA", cursive;
+    height: 80px;
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    width: 100%;
+    position: relative;
+    top: 150px; 
 
 }
 
@@ -49,22 +62,55 @@ body {
 
 
 .container-tabela{
+    display: flex;
+    justify-content: right;
+    padding: 100px;
     align-items: center;
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-}
-.tabela-bingo {
-    border: 3px solid rgb(70, 7, 101);
-    font-size: 2rem;
-    display: flex;
+    width: 100%;
+    position: relative;
+    padding-top: 0.0px;
+  
     
 }
 
+.tabela-bingo {
+    border-spacing: 4px;
+    border-collapse: separate; /*Necessário para o border-radius funcionar */
+    border-radius: 5px;
+    overflow: hidden;
+    table-layout: fixed;
 
-
-.tabela-bingo td {
-    border: 1px solid rgb(89, 4, 110);
-    padding: 10px 40px;
 }
 
+.tabela-bingo th, .tabela-bingo td {
+    text-align: center;
+}
+
+.tabela-bingo th {
+    font-family: "Bebas Neue", sans-serif;
+    color: #ffffff;
+    padding: 2px 50px;
+    font-size: 2.6rem;
+    border-radius: 2px;
+    -webkit-text-stroke: 0.1px black;
+
+}
+
+/* Estilo para as células de dados (números) */
+.tabela-bingo td {
+    border: 1px solid rgb(0, 0, 0);
+    font-family: "Roboto Mono", monospace;
+    font-size: 1rem;
+    color: #141212;
+    background-color: #f5f4f486;
+    padding: 4px 1px;
+    border-radius: 500px;
+
+}
+
+.btnSortear{
+    color: #9440b0;
+    padding: 2px 50px;
+    font-size: 2.6rem;
+    border-radius: 2px;
+}
