--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-/* Reset básico */
+/* reset básico */
 * {
     margin: 0;
     padding: 0;
@@ -7,29 +7,13 @@
 }
 
 
-h1.bem-vindo{
+h1.bem-vindo {
     color: rgba(0, 0, 0, 0.774);
     padding: 0 30px;
-    font-family: "DM Serif Display", serif;
+    font-family: "Bebas Neue", sans-serif;
     font-weight: bold;
     font-style: normal;   
-    font-size: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    width: 100%;
-    position: relative;
-    top: 35px; 
-    text-shadow: 0 0 15px rgba(255, 255, 255, 0.8), 0 0 30px rgba(100, 200, 255, 0.6), 0 0 45px rgba(200, 100, 255, 0.4);
-    transition: box-shadow 0.3s ease-in-out; /* Adiciona uma transição suave para o efeito de hover */
-}
-
-
-h2.bingoGalerinha{
-    color: rgba(55, 5, 136, 0.705);
-    padding: 0 30px;
-   font-family: "Permanent Marker", cursive;
-    font-size: 55px;
+    font-size: 65px;
     display: flex;
     align-items: center;
     justify-content: left;
@@ -37,8 +21,9 @@ h2.bingoGalerinha{
     position: relative;
     top: 60px; 
     text-shadow: 0 0 15px rgba(255, 255, 255, 0.8), 0 0 30px rgba(100, 200, 255, 0.6), 0 0 45px rgba(200, 100, 255, 0.4);
-    transition: box-shadow 0.3s ease-in-out; /* Adiciona uma transição suave para o efeito de hover */
+    transition: box-shadow 0.3s ease-in-out;
 }
+
 
 
 
@@ -49,12 +34,12 @@ html, body {
 
 body {
   background: linear-gradient(-45deg, #63e2f3, #b05ad8, #00ffcc, #9900ff);
-  background-size: 400% 400%; /* deixa a área maior para a animação se mover */
-  animation: gradientMove 15s ease infinite; /* chama a animação */
+  background-size: 400% 400%;
+  animation: gradientMove 15s ease infinite;
   position: relative;
 }
 
-/* Animação do gradiente */
+/* Animação do wlpp*/
 @keyframes gradientMove {
   0% {
     background-position: 0% 50%;
@@ -68,18 +53,18 @@ body {
 }
 
 
-.container-tabela{
+.container-tabela {
     width: auto;
-    position: absolute; /* Posicionamento absoluto */
-    top: 50px;         /* Ajuste a distância do topo conforme necessário */
-    right: 50px;        /* Distância da borda direita */
+    position: absolute;
+    top: 50px;
+    right: 50px;
     padding-top: 0;
     
 }
 
 .tabela-bingo {
     border-spacing: 4px;
-    border-collapse: separate; /*Necessário para o border-radius funcionar */
+    border-collapse: separate; 
     border-radius: 5px;
     overflow: hidden;
     table-layout: fixed;
@@ -95,18 +80,17 @@ body {
     font-weight: 400;
     font-style: normal;
     color: #ffffff;
-    padding: 2px 50px;
+    padding: 2px 45px;
     border: 1px solid rgb(0, 0, 0);
     background-color: #7a4ff0b2;
     font-size: 2.6rem;
     border-radius: 450px;
     -webkit-text-stroke: 0.1px black;
     text-shadow: 0 0 15px rgba(255, 255, 255, 0.8), 0 0 30px rgba(100, 200, 255, 0.6), 0 0 45px rgba(200, 100, 255, 0.4);
-    transition: box-shadow 0.3s ease-in-out; /* Adiciona uma transição suave para o efeito de hover */
+    transition: box-shadow 0.3s ease-in-out; 
 
 }
 
-/* Estilo para as células de dados (números) */
 .tabela-bingo td {
     border: 1px solid rgb(0, 0, 0);
     font-family: "Roboto Mono", monospace;
@@ -118,23 +102,23 @@ body {
 
 }
 
-.btnSortear{
-    color: #fff; /* Alterei a cor do texto para branco para melhor contraste */
+.btnSortear {
+    color: #fff; 
     padding: 15px 50px;
     font-family: "Lilita One", sans-serif;
     font-weight: 400;
     font-style: normal;    font-size: 2rem;
     border-radius: 10px;
-    border: none; /* Adicionado para remover a borda padrão */
+    border: none; 
     background: linear-gradient(-45deg, #ff00cc, #3333ff, #00ffcc, #ff9900);
     background-size: 400% 400%;
     animation: gradientMove 15s ease infinite;
     cursor: pointer;
-    display: block; /* Faz o botão se comportar como um bloco */
-    margin-left: 30px; /* Centraliza horizontalmente */
-    margin-top: 100px;
+    display: block; 
+    margin-left: 30px; 
+    margin-top: 90px;
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.8), 0 0 30px rgba(100, 200, 255, 0.6), 0 0 45px rgba(200, 100, 255, 0.4);
-    transition: box-shadow 0.3s ease-in-out; /* Adiciona uma transição suave para o efeito de hover */
+    transition: box-shadow 0.3s ease-in-out; 
 }
 
 
@@ -145,16 +129,15 @@ body {
 }
 
 
-
 .logo_bingo{
     height: 400px;
     vertical-align: middle;
 }
 
-h2.numSorteado{
-    color: rgb(90, 3, 83);
+h2.numSorteado {
+    color: rgba(15, 11, 31, 0.89);
     padding: 0 30px;
-    font-family: "Archivo Black", sans-serif;
+    font-family: "Bebas Neue", sans-serif;
     font-size: 40px;
     font-weight: bold;
     display: flex;
@@ -162,7 +145,189 @@ h2.numSorteado{
     justify-content: left;
     width: 100%;
     position: relative;
-    margin-top: 20px; 
+    margin-top: 30px; 
     text-shadow: 0 0 15px rgba(255, 255, 255, 0.8), 0 0 30px rgba(100, 200, 255, 0.6), 0 0 45px rgba(200, 100, 255, 0.4);
-    transition: box-shadow 0.3s ease-in-out; /* Adiciona uma transição suave para o efeito de hover */
+    transition: box-shadow 0.3s ease-in-out; 
+}
+
+.numeroSorteado {
+    font-size: 5rem;
+    font-family: "Lilita One", sans-serif;
+    color: white;
+    text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+    margin-left: 30px;
+    padding: 6px 12px;
+    background-color: #7a4ff0b2;
+    border-radius: 15px;
+    min-width: 100px;
+    text-align: center;
+    display: inline-block;
+    margin-top: 8px;
+}
+
+
+.tabela-bingo td.sorteado {
+    background-color: #7a4ff0; 
+    color: white; 
+    font-weight: bold;
+    transform: scale(1.1);
+    transition: all 0.3s ease;
+}
+
+.popup-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.popup-container.mostrar {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.popup {
+    background: white;
+    padding: 30px 50px;
+    border-radius: 10px;
+    text-align: center;
+    font-family: "Rubik", sans-serif;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.5), 0 0 40px rgba(0, 0, 0, 0.3);
+}
+
+.popup h2 {
+    margin-bottom: 10px;
+    color: #333;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 2.5rem;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.popup p {
+    font-family: "Lilita One", sans-serif;
+    font-size: 5rem;
+    font-weight: bold;
+    color: #7a4ff0;
+    margin-bottom: 20px;
+    -webkit-text-stroke: 1px black;
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+}
+
+.popup button {
+    padding: 10px 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: #7a4ff0;
+    color: white;
+    font-family: "Lilita One", sans-serif;
+    font-size: 1.2rem;
+    cursor: pointer;
+    box-shadow: 0 0 15px rgba(122, 79, 240, 0.8);
+    transition: all 0.3s ease-in-out;
+}
+
+.popup button:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 25px rgba(122, 79, 240, 1);
+}
+
+
+
+
+.historico-container {
+    background-color: rgba(255, 255, 255, 0.2);
+    margin-left: 170px;
+    margin-top: -104px;
+    padding: 15px;
+    border-radius: 10px;
+    width: 350px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.historico-container h3 {
+    font-family: "Bebas Neue", sans-serif;
+    color: rgb(41, 3, 66);
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    text-shadow: 0 0 5px rgb(255, 255, 255);
+}
+
+#historico-numeros {
+    display: flex;
+    flex-wrap: wrap; 
+    gap: 8px; 
+    max-height: 200px; 
+    overflow-y: auto; 
+    padding-right: 5px;
+}
+
+.numero-historico{
+    background-color: #f5f4f4;
+    color: #141212;
+    font-family: "Roboto Mono", monospace;
+    font-weight: bold;
+    font-size: 1rem;
+    border-radius: 50%; 
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+
+#btnResetarJogo {
+    padding: 10px 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: #ff4757; 
+    color: white;
+    font-family: "Lilita One", sans-serif;
+    font-size: 1.2rem;
+    cursor: pointer;
+    margin-top: 15px;
+    box-shadow: 0 0 15px rgba(255, 71, 87, 0.8);
+    transition: all 0.3s ease-in-out;
+}
+
+#btnResetarJogo:hover {
+    transform: scale(1.05);
+    background-color: #e04050;
+    box-shadow: 0 0 25px rgba(255, 71, 87, 1);
+}
+
+.resetarbtn {
+    position: absolute;
+    margin-left: 30px;
+    padding: 10px 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #ff4757; 
+    color: white;
+    font-family: "Lilita One", sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+    margin-left: 30px;
+    box-shadow: 0 0 15px rgba(255, 71, 87, 0.8);
+    transition: all 0.3s ease-in-out;
+    font-weight: 400;
+    display: block; 
+    margin-left: 30px; 
+    margin-top: 20px;
+}
+
+#resetarbtn:hover {
+    transform: scale(1.05);
+    background-color: #e04050;
+    box-shadow: 0 0 25px rgba(255, 71, 87, 1);
 }
